Dev fix: z-index when used with BS5
DD-2696

--- a/examples/resources/demo.css
+++ b/examples/resources/demo.css
@@ -373,6 +373,7 @@ div.dt-demo-options {
   position: absolute;
   right: 0;
   top: 0.5em;
+  z-index: 12;
 }
 
 div.dt-demo-selector {
